# watcher-cog

./: .env.example  .releaserc.json  CHANGELOG.md  README.md  evaluator.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKLOG.md  CONFIGURATION.md
docs/decisions/: ADR-001-always-on-not-a-flow.md  ADR-002-raw-httpx-prefect-trigger.md  ADR-003-polling-cadence.md  README.md
src/watcher_cog/: config.py  drive_client.py  heartbeat.py  main.py  prefect_trigger.py  watcher.py
tests/: test_drive_client.py  test_heartbeat.py  test_main.py  test_prefect_trigger.py  test_watcher.py
