[project]
name = "watcher-cog"
version = "1.6.1"
description = "Google Drive watcher worker that triggers Prefect deployments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "common-python-utils",
    "prefect",
    "python-dotenv",
    "sentry-sdk",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff",
]

[tool.uv.sources]
common-python-utils = { git = "https://github.com/mini-app-polis/common-python-utils.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/watcher_cog"]
